pkg/codegen/testdata/codegen/test/throw_simple.glj
(ns codegen.test.throw-simple)

(defn ^{:expected-error "uncaught error"} -main []
  (throw "uncaught error"))